# PersonalConfig

helix/: config.toml
python/: pyproject.toml
skills/: README.md  install.sh
skills/_template/: SKILL.md
skills/claude/: README.md
skills/codex/: README.md
skills/shared/: README.md
skills/shared/documentation/: UPSTREAM.md
